# plasma-i3-workspaces

./: .gitignore  CMakeLists.txt  install.sh  readme.md
plasmoid/: metadata.desktop
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: ConfigColor.qml  configColors.qml  configGeneral.qml  main.qml
src/: CMakeLists.txt  plasmai3workspaces.cpp  plasmai3workspaces.h  plugin.cpp  plugin.h  qmldir
